Iterating on ecs

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.configureondemand=false
 gdxControllersVersion=2.2.3
 controllerMappingVersion=2.3.0
 controllerScene2DVersion=2.3.0
-cruxVersion=0.1.0
+gdcruxVersion=0.0.2
 formicVersion=0.1.5
 lmlVersion=1.10.1.12.1
 visUiVersion=1.5.3
