--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,7 +11,7 @@ dependencies {
   api "com.github.payne911:PieMenu:$pieMenuVersion"
   api "com.github.raeleus.TenPatch:tenpatch:$tenPatchVersion"
   api "com.github.raeleus.stripe:stripe:$stripeVersion"
-  api "com.github.tommyettinger:crux:$cruxVersion"
+  api "com.github.tommyettinger:gdcrux:$gdcruxVersion"
   api "com.github.tommyettinger:formic:$formicVersion"
   api "com.github.tommyettinger:make_some_noise:$makeSomeNoiseVersion"
   api "com.github.tommyettinger:regexodus:$regExodusVersion"
